--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <section id="header" class="header">
     <img src="images/IMG-20230607-WA0057.jpg" alt="logo" class="logo">
     <nav class="navbar">
-        <a href="#home">Home</a>
+        <a href="#background-image">Home</a>
         <a href="#about">About</a>
         <a href="#shop">Shop</a>
         <a href="#gallery">Gallery</a>
@@ -30,7 +30,7 @@
 
 <!-- Home -->
 
-<div class="background-image">
+<div id="background-image">
     <div  class="background-content">
       <h1>Ella's Luxury Hair</h1>
       <p>Wholesale and retail Dealers on all Kinds of High quality human hair, wigs,closure, frontal, etc.</p>
@@ -40,7 +40,7 @@
 
 <!-- about -->
 
-<div class="about">
+<div id="about">
     <div class="main-about">
         <div class="inner-about">
             <div class="about-content">
@@ -60,7 +60,7 @@
 
 <!-- shop -->
 
-<div class="shop">
+<div id="shop">
     <h2>Our Shop</h2>
     <div class="box-container">
 
@@ -224,7 +224,7 @@
 
 <!-- Gallery -->
 
-<div class="gallery">
+<div id="gallery">
     <h2>Gallery</h2>
     <div class="maingallery">
         <div class="innergallery">
