--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <!-- Home -->
 
-<div id="background-image">
+<div class="background-image" id="background-image">
     <div  class="background-content">
       <h1>Ella's Luxury Hair</h1>
       <p>Wholesale and retail Dealers on all Kinds of High quality human hair, wigs,closure, frontal, etc.</p>
@@ -40,7 +40,7 @@
 
 <!-- about -->
 
-<div id="about">
+<div class="about" id="about">
     <div class="main-about">
         <div class="inner-about">
             <div class="about-content">
@@ -60,7 +60,7 @@
 
 <!-- shop -->
 
-<div id="shop">
+<div class="shop" id="shop">
     <h2>Our Shop</h2>
     <div class="box-container">
 
@@ -224,7 +224,7 @@
 
 <!-- Gallery -->
 
-<div id="gallery">
+<div class="gallery" id="gallery">
     <h2>Gallery</h2>
     <div class="maingallery">
         <div class="innergallery">
